--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.grancentreapp">
 
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainRestaurant"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainHotel"></activity>
+        <activity android:name=".MainRestaurant" />
+        <activity android:name=".MainWeather" />
+        <activity android:name=".MainMovies" />
         <activity android:name=".MainHotels" />
         <activity android:name=".MainActivity">
             <intent-filter>
