--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainHotel"></activity>
+        <activity android:name=".MainBusines"></activity>
+        <activity android:name=".MainHotel" />
+        <activity android:name=".RecyclerViewActivity" />
         <activity android:name=".MainRestaurant" />
         <activity android:name=".MainWeather" />
         <activity android:name=".MainMovies" />
